сделать верстку,прописать код в js

--- a/index.html
+++ b/index.html
@@ -32,60 +32,60 @@
     </div>
 
     <section class="profile">
-      <img src="./images/image.jpg" alt="Кусто" class="profile__avatar">
+      <img src="./images/Олицетворение ИИ.png" alt="Олицетворение ИИ" class="profile__avatar">
       <div class="profile__info">
-        <h1 class="profile__info-name">Жак-Ив Кусто</h1>
+        <h1 class="profile__info-name">Midjourney</h1>
         <button class="profile__info-edit"></button>
-        <p class="profile__info-job">Исследователь океана</p>
+        <p class="profile__info-job">Искустевенный интелект воплощающий фантазии</p>
       </div>
       <button class="profile__button-add"></button>
     </section>
 
     <section class="elements">
       <div class="card">
-        <img class="card__image" src="./images/karacha.jpg" alt="Карачаевск">
+        <img class="card__image" src="./images/Планета.png" alt="Планета U-22">
         <div class="card__container">
-          <h3 class="card__title">Карачаевск</h3>
+          <h3 class="card__title">Планете U-22</h3>
           <button class="card__like"></button>
         </div>
       </div>
 
       <div class="card">
-        <img class="card__image" src="./images/Elbrus.png" alt="Эльбрус">
+        <img class="card__image" src="./images/Бегущий по лезвию.png" alt="Город будущего">
         <div class="card__container">
-          <h3 class="card__title">Гора Эльбрус</h3>
+          <h3 class="card__title">Трущёбы</h3>
           <button class="card__like"></button>
         </div>
       </div>
 
       <div class="card">
-        <img class="card__image" src="./images/deistv.Elbrus.png" alt="Домбай">
+        <img class="card__image" src="./images/Моссква будущего.png" alt="Москва 2077">
         <div class="card__container">
-          <h3 class="card__title">Домбай</h3>
+          <h3 class="card__title">Моссква 2077</h3>
           <button class="card__like"></button>
         </div>
       </div>
 
       <div class="card">
-        <img class="card__image" src="./images/Elbrus.png" alt="Гора Эльбрус">
+        <img class="card__image" src="./images/Новостройки.png" alt="Мегаполис">
         <div class="card__container">
-          <h3 class="card__title">Гора Эльбрус</h3>
+          <h3 class="card__title">Мегаполис</h3>
           <button class="card__like"></button>
         </div>
       </div>
 
       <div class="card">
-        <img class="card__image" src="./images/deistv.Elbrus.png" alt="Домбай">
+        <img class="card__image" src="./images/ТОкио.png" alt="Токио">
         <div class="card__container">
-          <h3 class="card__title">Ижевск</h3>
+          <h3 class="card__title">Токио будующего</h3>
           <button class="card__like"></button>
         </div>
       </div>
 
       <div class="card">
-        <img class="card__image" src="./images/karacha.jpg" alt="Карачаево-Черкеск">
+        <img class="card__image" src="./images/Юпитер.png" alt="Юпитер">
         <div class="card__container">
-          <h3 class="card__title">Карачаево-Черкеск</h3>
+          <h3 class="card__title">Загадочная Планета</h3>
           <button class="card__like"></button>
         </div>
       </div>
