сделать верстку,прописать код в js

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       </div>
 
       <div class="card">
-        <img class="card__image" src="./images/Бегущий по лезвию.png" alt="Город будущего">
+        <img class="card__image" src="./images/програмист.png" alt="Програмист">
         <div class="card__container">
-          <h3 class="card__title">Трущёбы</h3>
+          <h3 class="card__title">Инженер будущего</h3>
           <button class="card__like"></button>
         </div>
       </div>
@@ -67,9 +67,9 @@
       </div>
 
       <div class="card">
-        <img class="card__image" src="./images/Новостройки.png" alt="Мегаполис">
+        <img class="card__image" src="./images/девушка.png" alt="Девушка">
         <div class="card__container">
-          <h3 class="card__title">Мегаполис</h3>
+          <h3 class="card__title">Охотница</h3>
           <button class="card__like"></button>
         </div>
       </div>
@@ -77,7 +77,7 @@
       <div class="card">
         <img class="card__image" src="./images/ТОкио.png" alt="Токио">
         <div class="card__container">
-          <h3 class="card__title">Токио будующего</h3>
+          <h3 class="card__title">Токио будущего</h3>
           <button class="card__like"></button>
         </div>
       </div>
