--- a/index.html
+++ b/index.html
@@ -13,87 +13,103 @@
 
 <body class="page">
   <header class="header">
-    <img src="./images/Vector.svg" class="header__logo" alt="Логотип">
+    <img src="./images/Vector.svg" alt="логотип" class="header__logo">
   </header>
-
   <main>
-    <div class="popup">
-      <div class="popup__container">
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <button class="popup__btn-close"></button>
-        <form class="popup__form" name="formProfile">
-          <input class="popup__form-input popup__form-input_type_name" type="text" name="name" value=""
-            placeholder="Имя" required>
-          <input class="popup__form-input popup__form-input_type_job" type="text" name="job" value=""
-            placeholder="Профессия" required>
-          <button type="submit" class="popup__form-btn">Сохранить</button>
-        </form>
+    <section class="profile" aria-label="профиль">
+      <div class="profile__user">
+        <img src="./images/Олицетворение ИИ.png" alt="Олицетворение ИИ" class="profile__avatar">
+        <div class="profile__info">
+          <div class="profile__personal-data">
+            <h1 class="profile__name">Midjourney</h1>
+            <button class="profile__edit-button" type="button">
+              <img src="./images/редактирование .svg" alt="редактировать профиль" class="profile__edit-button-pic">
+            </button>
+          </div>
+          <p class="profile__profession">Искустевенный интелект воплощающий фантазии</p>
+        </div>
       </div>
-    </div>
-
-    <section class="profile">
-      <img src="./images/Олицетворение ИИ.png" alt="Олицетворение ИИ" class="profile__avatar">
-      <div class="profile__info">
-        <h1 class="profile__info-name">Midjourney</h1>
-        <button class="profile__info-edit"></button>
-        <p class="profile__info-job">Искустевенный интелект воплощающий фантазии</p>
-      </div>
-      <button class="profile__button-add"></button>
+      <button class="profile__add-button" type="button">
+        <img src="./images/добавить.svg" alt="добавить" class="profile__add-button-pic">
+      </button>
     </section>
-
-    <section class="elements">
-      <div class="card">
-        <img class="card__image" src="./images/Планета.png" alt="Планета U-22">
-        <div class="card__container">
-          <h3 class="card__title">Планете U-22</h3>
-          <button class="card__like"></button>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card__image" src="./images/програмист.png" alt="Програмист">
-        <div class="card__container">
-          <h3 class="card__title">Инженер будущего</h3>
-          <button class="card__like"></button>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card__image" src="./images/Моссква будущего.png" alt="Москва 2077">
-        <div class="card__container">
-          <h3 class="card__title">Моссква 2077</h3>
-          <button class="card__like"></button>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card__image" src="./images/девушка.png" alt="Девушка">
-        <div class="card__container">
-          <h3 class="card__title">Охотница</h3>
-          <button class="card__like"></button>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card__image" src="./images/ТОкио.png" alt="Токио">
-        <div class="card__container">
-          <h3 class="card__title">Токио будущего</h3>
-          <button class="card__like"></button>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card__image" src="./images/Юпитер.png" alt="Юпитер">
-        <div class="card__container">
-          <h3 class="card__title">Загадочная Планета</h3>
-          <button class="card__like"></button>
-        </div>
-      </div>
+    <section class="elements" aria-label="фотопоток">
+      <ul class="elements__list">
+        <li class="elements__element">
+          <img src="./images/Планета.png" alt="Планета U-22" class="elements__image">
+          <div class="elements__text-container">
+            <h2 class="elements__title">Планета U-22</h2>
+            <button class="elements__like-button" type="button">
+              <img src="./images/Vector-2.svg" alt="лайк" class="elements__like">
+            </button>
+          </div>
+        </li>
+        <li class="elements__element"> <img src="./images/програмист.png" alt="програмист"
+            class="elements__image">
+          <div class="elements__text-container">
+            <h2 class="elements__title">Инженер будущего</h2>
+            <button class="elements__like-button" type="button">
+              <img src="./images/Vector-2.svg" alt="лайк" class="elements__like">
+            </button>
+          </div>
+        </li>
+        <li class="elements__element"> <img src="./images/Моссква будущего.png" alt="Моссква"
+            class="elements__image">
+          <div class="elements__text-container">
+            <h2 class="elements__title">Моссква 2077</h2>
+            <button class="elements__like-button" type="button">
+              <img src="./images/Vector-2.svg" alt="лайк" class="elements__like">
+            </button>
+          </div>
+        </li>
+        <li class="elements__element"> <img src="./images/девушка.png" alt="девушка"
+            class="elements__image">
+          <div class="elements__text-container">
+            <h2 class="elements__title">Охотница</h2>
+            <button class="elements__like-button" type="button">
+              <img src="./images/Vector-2.svg" alt="лайк" class="elements__like">
+            </button>
+          </div>
+        </li>
+        <li class="elements__element"> <img src="./images/ТОкио.png" alt="токио"
+            class="elements__image">
+          <div class="elements__text-container">
+            <h2 class="elements__title">Токио будущего</h2>
+            <button class="elements__like-button" type="button">
+              <img src="./images/Vector-2.svg" alt="лайк" class="elements__like">
+            </button>
+          </div>
+        </li>
+        <li class="elements__element"> <img src="./images/Юпитер.png" alt="Юпитер"
+            class="elements__image">
+          <div class="elements__text-container">
+            <h2 class="elements__title">Загадочная Планета</h2>
+            <button class="elements__like-button" type="button">
+              <img src="./images/Vector-2.svg" alt="лайк" class="elements__like">
+            </button>
+          </div>
+        </li>
+      </ul>
     </section>
   </main>
+  <footer class="footer" aria-label="подвал сайта">
+    <p class="footer__author">© 2023 Mesto Russia</p>
+  </footer>
+  <section class="popup">
+    <div class="popup__container">
+      <button class="popup__close-button" type="button"><img class="popup__close-img" src="./images/закрыть.svg"
+          alt="Закрыть"></button>
+      <form class="popup__form" name="change-profile">
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <fieldset class="popup__input-container">
+          <input type="text" class="popup__form-field popup__form-field_input_name" name="name">
+          <input type="text" class="popup__form-field popup__form-field_input_job" name="job">
+        </fieldset>
+        <button class="popup__save-button" type="submit">Сохранить</button>
+      </form>
+    </div>
+  </section>
+  <script src="./scripts/index.js"></script>
 </body>
-<footer class="footer">
-  <p class="footer__info">© 2023 Mesto Russia</p>
-</footer>
-<script src="./scripts/index.js"></script>
+
 </html>
