--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
   <main>
     <section class="profile" aria-label="профиль">
       <div class="profile__user">
-        <img src="./images/Олицетворение ИИ.png" alt="Олицетворение ИИ" class="profile__avatar">
+        <img src="./images/AI.png" alt="Олицетворение ИИ" class="profile__avatar">
         <div class="profile__info">
-          <div class="profile__personal-data">
+          <div class="profile__persnal-data ">
             <h1 class="profile__name">Midjourney</h1>
             <button class="profile__edit-button" type="button">
-              <img src="./images/редактирование .svg" alt="редактировать профиль" class="profile__edit-button-pic">
+              <img src="./images/editor.svg" alt="редактировать профиль" class="profile__edit-button-pic">
             </button>
           </div>
           <p class="profile__profession">Искустевенный интелект воплощающий фантазии</p>
         </div>
       </div>
       <button class="profile__add-button" type="button">
-        <img src="./images/добавить.svg" alt="добавить" class="profile__add-button-pic">
+        <img src="./images/add.svg" alt="добавить" class="profile__add-button-pic">
       </button>
     </section>
     <section class="elements" aria-label="фотопоток">
       <ul class="elements__list">
         <li class="elements__element">
-          <img src="./images/Планета.png" alt="Планета U-22" class="elements__image">
+          <img src="./images/planet.png" alt="Планета U-22" class="elements__image">
           <div class="elements__text-container">
             <h2 class="elements__title">Планета U-22</h2>
             <button class="elements__like-button" type="button">
@@ -44,8 +44,8 @@
             </button>
           </div>
         </li>
-        <li class="elements__element"> <img src="./images/програмист.png" alt="програмист"
-            class="elements__image">
+        <li class="elements__element">
+           <img src="./images/programmer.png" alt="програмист" class="elements__image">
           <div class="elements__text-container">
             <h2 class="elements__title">Инженер будущего</h2>
             <button class="elements__like-button" type="button">
@@ -53,8 +53,7 @@
             </button>
           </div>
         </li>
-        <li class="elements__element"> <img src="./images/Моссква будущего.png" alt="Моссква"
-            class="elements__image">
+        <li class="elements__element"> <img src="./images/Moscow.png" alt="Моссква" class="elements__image">
           <div class="elements__text-container">
             <h2 class="elements__title">Моссква 2077</h2>
             <button class="elements__like-button" type="button">
@@ -62,8 +61,7 @@
             </button>
           </div>
         </li>
-        <li class="elements__element"> <img src="./images/девушка.png" alt="девушка"
-            class="elements__image">
+        <li class="elements__element"> <img src="./images/lady.png" alt="девушка" class="elements__image">
           <div class="elements__text-container">
             <h2 class="elements__title">Охотница</h2>
             <button class="elements__like-button" type="button">
@@ -71,8 +69,7 @@
             </button>
           </div>
         </li>
-        <li class="elements__element"> <img src="./images/ТОкио.png" alt="токио"
-            class="elements__image">
+        <li class="elements__element"> <img src="./images/tokyo.png" alt="токио" class="elements__image">
           <div class="elements__text-container">
             <h2 class="elements__title">Токио будущего</h2>
             <button class="elements__like-button" type="button">
@@ -80,8 +77,7 @@
             </button>
           </div>
         </li>
-        <li class="elements__element"> <img src="./images/Юпитер.png" alt="Юпитер"
-            class="elements__image">
+        <li class="elements__element"> <img src="./images/Jupiter.png" alt="Юпитер" class="elements__image">
           <div class="elements__text-container">
             <h2 class="elements__title">Загадочная Планета</h2>
             <button class="elements__like-button" type="button">
@@ -97,8 +93,8 @@
   </footer>
   <section class="popup">
     <div class="popup__container">
-      <button class="popup__close-button" type="button"><img class="popup__close-img" src="./images/закрыть.svg"
-          alt="Закрыть"></button>
+      <button class="popup__close-button" type="button">
+        <img class="popup__close-img" src="./images/close.svg" alt="Закрыть"></button>
       <form class="popup__form" name="change-profile">
         <h2 class="popup__title">Редактировать профиль</h2>
         <fieldset class="popup__input-container">
